--- a/post_farm/src/style/SignUp.css
+++ b/post_farm/src/style/SignUp.css
@@ -1,20 +1,22 @@
 @font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Tenada';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/Tenada.woff2') format('woff2');
+  font-family: "Tenada";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/Tenada.woff2")
+    format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   background-color: #ffffff; /* 배경색 */
   display: flex;
   justify-content: center;
@@ -34,7 +36,7 @@ body {
 }
 
 .login-title {
-  font-family: 'Tenada';
+  font-family: "Tenada";
   font-size: 5em;
   color: white;
   margin: 80px 0px;
@@ -51,7 +53,7 @@ body {
 }
 
 input {
-  font-family: 'Pretendard-Regular';
+  font-family: "Pretendard-Regular";
   width: 280px;
   height: 25px;
   padding: 10px;
@@ -60,7 +62,8 @@ input {
   font-size: 1em;
 }
 
-.delete-button, .toggle-password {
+.delete-button,
+.toggle-password {
   position: absolute;
   right: 20px;
   top: 45%;
@@ -83,7 +86,7 @@ input {
 }
 
 .login-button {
-  background-color: #00A24D;
+  background-color: #00a24d;
   color: white;
   padding: 10px;
   border: none;
@@ -99,7 +102,7 @@ input {
 }
 
 .signup-link a {
-  color: #0645AD;
+  color: #0645ad;
   text-decoration: none;
 }
 
